# baku

./: .gitignore  README.md  gpt-oss-20b.csv  gpt-oss-20b_1.csv  gpt-oss-20b_2.csv  gpt-oss-20b_3.csv  gpt-oss-20b_4.csv  opencl-data.csv  pyproject.toml  test.ipynb
code/: 0U08.c  2H2P.c  2HCZ.c  2HS0.c  4GKX.c  4KXK.c  4ZBI.c  54A4.c  5U8F.c  615G.c  6A1I.c  83WY.c  88D8.c  8IJF.c  94LS.c  ASXE.c  BAF0.c  C56M.c  CLVX.c  CVMS.c  D6IT.c  ELAL.c  FIBD.c  FS7D.c  G0VB.c  G4FU.c  HH4U.c  HN4I.c  HOD9.c  IX0B.c  JGBZ.c  JXJE.c  MES1.c  N5QI.c  Q1IO.c  RZ6P.c  S66T.c  TLSL.c  VXOT.c  X21H.c  (+3 more)
code/benchgen/: .gitignore
codes/: 0F6F.c  0MHW.c  0O6X.c  0TW7.c  10YZ.c  1OR4.c  2CU9.c  2IVN.c  3NDA.c  3XP4.c  5FT1.c  68G1.c  6JTO.c  6XZN.c  7GB8.c  7OLK.c  8KIM.c  8MHN.c  8WPX.c  92AW.c  ARDI.c  AUEO.c  B9Q1.c  CY2F.c  EEWJ.c  EG1H.c  HK3F.c  ICQU.c  J3SP.c  JEYW.c  KSKC.c  L8OF.c  N54H.c  NWIB.c  O48D.c  OV50.c  PR5Q.c  PUE8.c  QZ42.c  R4V6.c  (+3 more)
data/: chains.csv  llvmTestSuitePerf.csv  llvm_code_characteristics.csv  model_chain_programs.csv  model_values.csv  models_data.csv  training.jsonl
generated_programs/: 0-20programs.txt  modelstatus.csv  perf_data.csv  train_references.csv
notebooks/: BAKU-Time&Code.ipynb  BAKU_Fine_Tunning_IA3.ipynb  BAKU_Time&Code-InlineClasses.ipynb  BAKU_Time&Code-Inline_Classes.ipynb  BAKU_Time&Code.ipynb  Difference_Testing.ipynb  Fine_Tunning_IA3.ipynb  Fine_Tunning_LoRA.ipynb  Perf_linearRegression.ipynb  Prediction_test.ipynb
scripts/: code_compiler.py  inputGenerator.py  inputGenerator.sh  programparser.c  run_csmith_perf.py
(+5489 files in other folders)
