[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baku"
version = "0.1.0"
description = "generating benchmarks to stress-test computing systems such as compilers, operating systems and memory allocation systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "seaborn>=0.13.2",
]

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
exclude = ["notebooks*", "data*", "assets*"]
