[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baku"
version = "0.1.0"
description = "generating benchmarks to stress-test computing systems such as compilers, operating systems and memory allocation systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.179.0",
    "google-genai>=1.24.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
exclude = ["notebooks*", "data*", "assets*"]
